[gd_scene load_steps=2 format=3 uid="uid://eoo3n3sqiq4k"]

[ext_resource type="Script" uid="uid://bgyxwymthge5f" path="res://src/ui/widgets/shop_item/shop_item_row.gd" id="1_6gt6t"]

[node name="ItemContainer" type="VBoxContainer"]
script = ExtResource("1_6gt6t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "ItemName"

[node name="ItemDescription" type="Label" parent="MarginContainer/HBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "ItemDescription"

[node name="PriceBuyBlock" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Price" type="Label" parent="MarginContainer/HBoxContainer/PriceBuyBlock"]
unique_name_in_owner = true
layout_mode = 2
text = "Price"

[node name="BuySellButton" type="Button" parent="MarginContainer/HBoxContainer/PriceBuyBlock"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Buy"

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
